tests/valid_inputs/int_to_double.cpp

int main() {
	int i = 21;
	double d = i;
	const double cd = i;
	return d+cd;
}
