tests/invalid_inputs/sema/fo_nullptr_ambiguous_call.cpp

void foo(double *p);
void foo(int *p);

int main() {
	foo(nullptr);
}
